<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_park_village"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.peisocodes.vutapp.parkVillage"
    tools:showIn="@layout/activity_park_village">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busDates"
            android:textSize="20sp"
            android:layout_gravity="top|center"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busDestination"
            android:textSize="15sp"
            android:paddingBottom="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busTimes"
            android:textSize="13sp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busLocation"
            android:textSize="15sp"
            android:paddingBottom="2dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busTimes2"
            android:textSize="13sp"
            android:paddingBottom="5dp"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busWeekend"
            android:textSize="20sp"
            android:layout_gravity="top|center"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busDestination2"
            android:textSize="15sp"
            android:paddingBottom="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busWeekendTimes"
            android:textSize="13sp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busLocation2"
            android:textSize="15sp"
            android:paddingBottom="2dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busWeekendTimes2"
            android:textSize="13sp"
            android:paddingBottom="5dp"
            android:layout_gravity="end"/>
    </LinearLayout>
</ScrollView>

